# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  convert.sh  glew  run.sh
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: color.h  common.h  configs.h  gui.h  hittable_list.h  image.h  material.h  timer.h  warp.h  worlds.h
src/: camera.h  color.h  common.h  common.hpp  gui.cc  gui.cpp  gui.hpp  hittable_list.h  image.cc  image.cpp  image.h  main.cpp  material.h  ray.h  shape.h  sphere.h  timer.cc  timer.cpp  vector.h  warp.h
